2008-01-08  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Added Korean translation.
	* LINGUAS: Added 'ko'.

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.

2007-12-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

	* es.po: Updated Spanish translation 

2007-12-28  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-12-26  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Khaled Hosny.

2007-12-23  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation.

2007-12-20  Ihar Hrachyshka <booxter@lacinka.org>

	* be.po: Added Belarusian Cyrillic translation.

2007-12-20  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-12-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation

2007-12-15  Ihar Hrachyshka <booxter@lacinka.org>

	* be@latin.po: Updated Belarusian Latin translation.

2007-12-12  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-12-04  Nikos Charonitakis  <nikosx@gmail.com>

	* el.po: Updated Greek translation.

2007-11-21  Yannig Marchegay <yannig@marchegay.org> 

	* oc.po: Updated Occitan translation

2007-11-21  Andre Klapper  <a9016009@gmx.de>

	* de.po: Initial German translation.

2007-11-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.

2007-11-13  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>

	* be@latin.po: Updated Belarusian Latin translation.

2007-11-11  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-11-08  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-11-08  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Some fixes to Catalan translation.

2007-11-01  Gil Forcada  <gforcada@svn.gnome.org>

	* ca.po: Updated Catalan translation.

2007-11-01  Espen Stefansen  <espens@svn.gnome.org>
