@@ -6,22 +6,26 @@ releases.xml.in
 teams.py
 translation-teams.xml.in
 update-stats.py
-templates/index.tmpl
+templates/footer.tmpl
 templates/header.tmpl
-templates/show-stats.tmpl
-templates/person.tmpl
-templates/list-teams.tmpl
-templates/release.tmpl
+templates/index.tmpl
 templates/language-release-doc-stats-modules.tmpl
-templates/language-release-ui-stats.tmpl
-templates/list-releases.tmpl
-templates/language-release-ui-stats-modules.tmpl
-templates/list-languages.tmpl
-templates/language-release.tmpl
-templates/list-modules.tmpl
-templates/people.tmpl
-templates/module.tmpl
-templates/team.tmpl
 templates/language-release-doc-stats.tmpl
-templates/language-release-xml.tmpl
 templates/language-release-module-xml.tmpl
+templates/language-release.tmpl
+templates/language-release-ui-stats-modules.tmpl
+templates/language-release-ui-stats.tmpl
+templates/language-release-xml.tmpl
+templates/list-languages.tmpl
+templates/list-modules.tmpl
+templates/list-releases.tmpl
+templates/list-teams.tmpl
+templates/module-images.tmpl
+templates/module.tmpl
+templates/people.tmpl
+templates/person-base.tmpl
+templates/person.tmpl
+templates/release.tmpl
+templates/release-xml.tmpl
+templates/show-stats.tmpl
+templates/team.tmpl
