@@ -1,3 +1,7 @@
+2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* POTFILES.in: Added missing templates.
+
 2008-01-08  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Added Korean translation.
